Bug 584068 - Don't consider our canplaythrough status on live streams when moving out of buffering state. r=kinetik a=blocking2.0